--- a/HelloVisualGDB/KafkaProducer/KafkaProducer/KafkaProducer.vcxproj
+++ b/HelloVisualGDB/KafkaProducer/KafkaProducer/KafkaProducer.vcxproj
@@ -45,17 +45,21 @@
     </Link>
     <ClCompile>
       <AdditionalIncludeDirectories>C:/poky/sdk_x86/sysroots/x86\_64-pokysdk-mingw32/usr/lib/arm-poky-linux-gnueabi/gcc/arm-poky-linux-gnueabi/7.1.1/include;C:/poky/sdk_x86/sysroots/x86\_64-pokysdk-mingw32/usr/lib/arm-poky-linux-gnueabi/gcc/arm-poky-linux-gnueabi/7.1.1/include-fixed;=/usr/include/c++/7.1.1;=/usr/include/c++/7.1.1/arm-poky-linux-gnueabi;=/usr/include;=/usr/lib/gcc/arm-poky-linux-gnueabi/7.1.1/include;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>DEBUG=1; _GLIBCXX_ABI_TAG_CXX11=;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>DEBUG=1; _GLIBCXX_ABI_TAG_CXX11=;__ARM_PCS_VFP;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>-march=armv7-a -mfpu=neon -mfloat-abi=hard -mcpu=cortex-a9 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="InfluxDB.h" />
+    <ClInclude Include="KafkaProducer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ItemGroup>
+    <ClCompile Include="InfluxDB.cpp" />
     <ClCompile Include="KafkaProducer.cpp" />
+    <ClCompile Include="main.cpp" />
     <None Include="KafkaProducer-Debug.vgdbsettings" />
     <None Include="KafkaProducer-Release.vgdbsettings" />
   </ItemGroup>
