--- a/Main_UserSpace_App/Main_UserSpace_App/Main_UserSpace_App.vcxproj.filters
+++ b/Main_UserSpace_App/Main_UserSpace_App/Main_UserSpace_App.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="APDS9301.cpp">
       <Filter>Source files\Sensors</Filter>
     </ClCompile>
+    <ClCompile Include="IP_Sevenseg.cpp">
+      <Filter>Source files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Main_UserSpace_App-Debug.vgdbsettings" />
@@ -68,6 +71,9 @@
     </ClInclude>
     <ClInclude Include="APDS9301.h">
       <Filter>Header files\Sensors</Filter>
+    </ClInclude>
+    <ClInclude Include="IP_Sevenseg.h">
+      <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
